--- a/src/form_index.html
+++ b/src/form_index.html
@@ -14,11 +14,8 @@
 
   <body>
     <div class="page">
-      <load src="./partials/header.html" title="Bienvenidos a Adalab" />
-      <load src="./partials/main.html" />
       <load src="./partials/form.html" />
-      <load src="./partials/footer.html" />
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/form.js"></script>
   </body>
 </html>
