--- a/src/form_index.html
+++ b/src/form_index.html
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="/images/favicon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Amarna:ital,wght@0,100..700;1,100..700&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Mouse+Memoirs&family=New+Amsterdam&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
