--- a/src/form_index.html
+++ b/src/form_index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Sabor Extremo casting</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="icon" href="/images/favicon.png" />
+    <link rel="icon" href="/images/Logo-chef.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amarna:ital,wght@0,100..700;1,100..700&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Mouse+Memoirs&family=New+Amsterdam&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -18,8 +18,10 @@
 
   <body>
     <div class="page">
+      <load src="./partials/form-checkbox.html" />
       <load src="./partials/form.html" />
     </div>
     <script src="./js/form.js"></script>
+    <script src="./js/form-checkbox.js"></script>
   </body>
 </html>
