create 'propuesta' container, with the changing background

--- a/src/form_index.html
+++ b/src/form_index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="page">
+    <div class="page_form-index">
       <load src="./partials/form-checkbox.html" />
       <load src="./partials/form.html" />
       
