--- a/src/form_index.html
+++ b/src/form_index.html
@@ -18,11 +18,16 @@
 
   <body>
     <div class="page_form-index">
-      <load src="./partials/form-checkbox.html" />
-      <load src="./partials/form.html" />
+      <div class="form-index_container">
+        <load src="./partials/form-checkbox.html" />
+        <load src="./partials/form.html" />
+      </div>
+      <load src="./partials/card-preview.html" />
       
     </div>
+
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
+    
   </body>
 </html>
