--- a/src/index-copy.html
+++ b/src/index-copy.html
@@ -20,6 +20,7 @@
     <div class="page">
       <load src="./partials/form-checkbox.html" />
       <load src="./partials/footer.html" />
+      <load src="./partials/share.html"/>
     </div>
     <script src="./js/form-checkbox.js"></script>
   </body>
