--- a/src/form_index.html
+++ b/src/form_index.html
@@ -20,9 +20,11 @@
     <div class="page_form-index">
       <load src="./partials/form-checkbox.html" />
       <load src="./partials/form.html" />
+      <load src="./partials/share.html"/>
       
     </div>
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
+    <script src="./partials/share.js"></script>
   </body>
 </html>
