--- a/src/form_index.html
+++ b/src/form_index.html
@@ -25,6 +25,6 @@
     </div>
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
-    <script src="./partials/share.js"></script>
+    <script src="./js/share.js"></script>
   </body>
 </html>
