--- a/src/form_index.html
+++ b/src/form_index.html
@@ -21,11 +21,13 @@
       <load src="./partials/form-checkbox.html" />
       <load src="./partials/form.html" />
       <load src="./partials/share.html"/>
+      <load src="./partials/card.html"/>
       
     </div>
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
     <script src="./js/share.js"></script>
+    <script src="./js/card.js"></script>
 
   </body>
 </html>
