--- a/src/form_index.html
+++ b/src/form_index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="icon" href="/images/favicon.png" />
+    <link rel="icon" href="/images/Logo-chef.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amarna:ital,wght@0,100..700;1,100..700&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Mouse+Memoirs&family=New+Amsterdam&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -18,16 +18,17 @@
 
   <body>
     <div class="page_form-index">
-      <load src="./partials/form-checkbox.html" />
-      <load src="./partials/form.html" />
-      <load src="./partials/share.html"/>
-      <load src="./partials/card.html"/>
+      <div class="form-index_container">
+        <load src="./partials/form-checkbox.html" />
+        <load src="./partials/form.html" />
+        <load src="./partials/share.html"/>
+      </div>
+      <load src="./partials/card-preview.html" />
       
     </div>
+
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
     <script src="./js/share.js"></script>
-    <script src="./js/card.js"></script>
-
   </body>
 </html>
