--- a/src/form_index.html
+++ b/src/form_index.html
@@ -30,5 +30,6 @@
     <script src="./js/form.js"></script>
     <script src="./js/form-checkbox.js"></script>
     <script src="./js/share.js"></script>
+    <script src="./js/card-preview.js"></script>
   </body>
 </html>
