changes reset and scroll

--- a/src/form_index.html
+++ b/src/form_index.html
@@ -23,7 +23,7 @@
         <load src="./partials/form.html" />
         <load src="./partials/share.html"/>
       </div>
-      <load src="./partials/card-preview.html" />
+      <load src="./partials/card-preview.html" class=""/>
       
     </div>
 
